Filecoin Green API 0.0.4

--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "filecoin-green-api",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Filecoin Green API",
-  "main": "index.js",
   "scripts": {
-    "start": "env-cmd node index.js",
     "api": "env-cmd node api.js"
   },
   "repository": {
@@ -21,9 +19,8 @@
   },
   "homepage": "https://github.com/Digital-MOB-Filecoin/filecoin-green-api#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "bn.js": "^5.2.0",
-    "borc": "^3.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "pg": "^8.6.0",
     "time-stamp": "^2.2.0"
   }
