--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filecoin-green-api",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Filecoin Green API",
   "scripts": {
     "api": "env-cmd node api.js"
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Digital-MOB-Filecoin/filecoin-green-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.22.1",
     "express": "^4.17.1",
     "pg": "^8.6.0",
     "time-stamp": "^2.2.0"
