--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "date-fns": "^2.22.1",
     "express": "^4.17.1",
     "pg": "^8.6.0",
-    "time-stamp": "^2.2.0"
+    "swagger-ui-express": "^4.4.0",
+    "time-stamp": "^2.2.0",
+    "yamljs": "^0.3.0"
   }
 }
