refactor models batch1 on fil_miners_data_view_country_v2

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.8",
   "description": "Filecoin Green API",
   "scripts": {
-    "api": "env-cmd node api.js"
+    "api": "env-cmd node api.js",
+    "dev": "env $(cat .env) nodemon api.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
     "swagger-ui-express": "^4.4.0",
     "time-stamp": "^2.2.0",
     "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
