--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Build BE
 
 on:
   push:
@@ -12,77 +12,17 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository code
-      uses: actions/checkout@v2
+      - uses: cristi-mb/build-be@main
+        id: build-be
+        with:
+          aws-access-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+          slack-channel: ${{ env.SLACK_CHANNEL }}
+          slack-token: ${{ secrets.SLACK_BOT_TOKEN }}
+          ecr-repository: ${{ env.ECR_REPOSITORY }}
 
-    - name: Notify Slack
-      if: success()
-      id: slack
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        channel: ${{ env.SLACK_CHANNEL }}
-        status: STARTED
-        color: warning
-
-    - name: Set version
-      id: vars
-      run: echo "::set-output name=version::$(echo ${GITHUB_SHA} | cut -c1-7)"
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Echo IMAGE_TAG
-      env:
-        IMAGE_TAG: ${{ steps.vars.outputs.version }}
-      run: |
-        echo "Version to set in deployment manifests: ${IMAGE_TAG}"        
-
-    - name: Build, tag and push the image
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
-        IMAGE_TAG: ${{ steps.vars.outputs.version }}
-      run: |
-        docker build \
-          -t ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG} \
-          ${GITHUB_WORKSPACE}
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG}
-
-    - name: Notify Slack success
-      if: success()
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        message_id: ${{ steps.slack.outputs.message_id }}
-        channel: ${{ env.SLACK_CHANNEL }}
-        status: SUCCESS
-        color: good
-
-    - name: Notify Slack failure
-      if: failure()
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        message_id: ${{ steps.slack.outputs.message_id }}
-        channel: ${{ env.SLACK_CHANNEL }}
-        status: FAILED
-        color: danger
-
-    - name: Logout from Amazon ECR
-      if: always()
-      run: |
-        docker logout ${{ steps.login-ecr.outputs.registry }}
+      - name: Show image tag
+        if: steps.build-be.outcome == 'success'
+        run: echo "${{ steps.build-be.outputs.image-tag }}"
